[gd_scene load_steps=44 format=3 uid="uid://bldc3t44l4koc"]

[ext_resource type="Texture2D" uid="uid://bm6w2xmqmmn63" path="res://Gundam project/Sprites/spr_czk_idle.png" id="1_ic5ty"]
[ext_resource type="Script" path="res://Gundam project/Code/char_zaku.gd" id="1_pued7"]
[ext_resource type="Texture2D" uid="uid://d0b8b2xjtrooo" path="res://Gundam project/Sprites/spr_czk_L1.png" id="2_iau6v"]
[ext_resource type="Texture2D" uid="uid://c6m713syf2mkt" path="res://Gundam project/Sprites/spr_czk_L2.png" id="3_fh2jp"]
[ext_resource type="Texture2D" uid="uid://hlb7x43k0y4s" path="res://Gundam project/Sprites/spr_czk_R1.png" id="4_8px70"]
[ext_resource type="Texture2D" uid="uid://pkgb0rxrrtol" path="res://Gundam project/Sprites/spr_czk_R2.png" id="5_qgpdy"]
[ext_resource type="Script" path="res://Gundam project/Code/FiniteStateMachine.gd" id="6_fnn5n"]
[ext_resource type="Texture2D" uid="uid://dvjf3mcpbinrq" path="res://Gundam project/Sprites/zakuaxe.png" id="7_vtumf"]
[ext_resource type="Script" path="res://Gundam project/Code/Idle.gd" id="8_3pk6o"]
[ext_resource type="Texture2D" uid="uid://ckmuc52o3dowr" path="res://Gundam project/Sprites/zaku_gun.png" id="8_bqkkr"]
[ext_resource type="Script" path="res://Gundam project/Code/char_weapon.gd" id="8_o4ayo"]
[ext_resource type="Script" path="res://Gundam project/Code/Follow.gd" id="9_mo6w2"]
[ext_resource type="Texture2D" uid="uid://pu6lmb323nqv" path="res://Gundam project/Sprites/char bazooka.png" id="10_ak6m7"]
[ext_resource type="Texture2D" uid="uid://blcjf1vt8jvce" path="res://Gundam project/Sprites/crossair_white.png" id="10_q4sif"]
[ext_resource type="Texture2D" uid="uid://b4otdpcu0vpr5" path="res://Gundam project/Sprites/barHorizontal_white_mid.png" id="11_6imce"]
[ext_resource type="Script" path="res://Gundam project/Code/Slash.gd" id="11_w3l68"]
[ext_resource type="Script" path="res://Gundam project/Code/ZakuShot.gd" id="14_gd74x"]
[ext_resource type="PackedScene" uid="uid://n8b21o82qhfc" path="res://Gundam project/Scenes/charzakubullet.tscn" id="15_p4bml"]
[ext_resource type="Script" path="res://Gundam project/Code/Bazooka.gd" id="15_xgynh"]
[ext_resource type="PackedScene" uid="uid://bujdtt6b5dmgk" path="res://Gundam project/Scenes/bullet_bazooka_char.tscn" id="16_3hnkj"]
[ext_resource type="AudioStream" uid="uid://d0qe22e0otnx8" path="res://Gundam project/SFX/burst sound.wav" id="16_soqnm"]
[ext_resource type="AudioStream" uid="uid://dw5sow6rct1p0" path="res://Gundam project/SFX/Missile launch Sound effect.wav" id="17_v1jhs"]
[ext_resource type="Script" path="res://Gundam project/Code/zakDash.gd" id="17_ws0nr"]
[ext_resource type="PackedScene" uid="uid://d10edk7cv50jw" path="res://Gundam project/Scenes/Chartrail.tscn" id="23_26e1r"]
[ext_resource type="Script" path="res://Gundam project/Code/Death.gd" id="24_pbnnu"]
[ext_resource type="Texture2D" uid="uid://dp062dstfvknp" path="res://Gundam project/Sprites/star_01.png" id="25_bqt14"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mursv"]
radius = 35.0
height = 86.0

[sub_resource type="SpriteFrames" id="SpriteFrames_knpsf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ic5ty")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_iau6v")
}, {
"duration": 50.0,
"texture": ExtResource("3_fh2jp")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8px70")
}, {
"duration": 50.0,
"texture": ExtResource("5_qgpdy")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_df3ys"]
radius = 107.912

[sub_resource type="Animation" id="Animation_1pk46"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/defeat text:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponManager/Zaku_axe/Area2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponManager/char_weapon/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponManager/char_weapon/Sprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.213898]
}

[sub_resource type="Animation" id="Animation_0lw8o"]
resource_name = "bazooka_shot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponManager/char_bazooka/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.357453, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponManager/char_bazooka/Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_xnb2v"]
resource_name = "char defeated"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/defeat text:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_psggv"]
resource_name = "glowing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.0862745), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7y2u8"]
resource_name = "slash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponManager/Zaku_axe/Area2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponManager/Zaku_axe/Area2D/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.00235498, -1.34822, 3.69962, 5.4476]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponManager/Zaku_axe/Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_a7r2b"]
resource_name = "zaku_gun_shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponManager/char_weapon/Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponManager/char_weapon/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.213898, 0.61453, 0.213898]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_njm8o"]
_data = {
"RESET": SubResource("Animation_1pk46"),
"bazooka_shot": SubResource("Animation_0lw8o"),
"char defeated": SubResource("Animation_xnb2v"),
"glowing": SubResource("Animation_psggv"),
"slash": SubResource("Animation_7y2u8"),
"zaku_gun_shoot": SubResource("Animation_a7r2b")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ki8ag"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6wse8"]
texture = ExtResource("11_6imce")
modulate_color = Color(0.317647, 0.317647, 0.317647, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tjdlu"]
texture = ExtResource("11_6imce")
modulate_color = Color(0.572549, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ij3q6"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_g3gci"]
blend_mode = 1

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1s7hp"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 25.0
gravity = Vector3(0, 50, 0)
scale_min = 0.02
scale_max = 0.04

[sub_resource type="CircleShape2D" id="CircleShape2D_gg4sb"]
radius = 1805.9

[node name="Char_Zaku" type="CharacterBody2D" groups=["Boss"]]
script = ExtResource("1_pued7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_mursv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.05)
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_knpsf")
animation = &"idle"

[node name="WeaponManager" type="Node2D" parent="."]

[node name="Zaku_axe" type="Node2D" parent="WeaponManager"]

[node name="Area2D" type="Area2D" parent="WeaponManager/Zaku_axe"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponManager/Zaku_axe/Area2D"]
shape = SubResource("CircleShape2D_df3ys")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="WeaponManager/Zaku_axe/Area2D"]
position = Vector2(-21, 10)
rotation = 0.00235498
texture = ExtResource("7_vtumf")
offset = Vector2(51, 4)

[node name="char_weapon" type="Node2D" parent="WeaponManager"]

[node name="Sprite2D" type="Sprite2D" parent="WeaponManager/char_weapon"]
visible = false
position = Vector2(-18, 15)
rotation = 0.213898
scale = Vector2(0.497419, 0.497419)
texture = ExtResource("8_bqkkr")

[node name="bullet_spawner" type="Node2D" parent="WeaponManager"]
script = ExtResource("8_o4ayo")

[node name="EndOfGun" type="Marker2D" parent="WeaponManager/bullet_spawner"]
position = Vector2(23, 0)

[node name="Gun_direction" type="Marker2D" parent="WeaponManager/bullet_spawner"]
position = Vector2(65, 0)

[node name="Sprite2D" type="Sprite2D" parent="WeaponManager/bullet_spawner"]
modulate = Color(0.815686, 0, 0, 1)
position = Vector2(356, -1)
texture = ExtResource("10_q4sif")

[node name="char_bazooka" type="Node2D" parent="WeaponManager"]
position = Vector2(-1, 0)

[node name="Sprite2D" type="Sprite2D" parent="WeaponManager/char_bazooka"]
visible = false
position = Vector2(-18, -4)
scale = Vector2(0.648148, 0.648148)
texture = ExtResource("10_ak6m7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_njm8o")
}

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="UI"]
visible = false
material = SubResource("CanvasItemMaterial_ki8ag")
custom_minimum_size = Vector2(200, 10)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -97.0
offset_top = 15.0
offset_right = 103.0
offset_bottom = 42.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxTexture_6wse8")
theme_override_styles/fill = SubResource("StyleBoxTexture_tjdlu")
max_value = 1000.0
value = 1000.0
show_percentage = false

[node name="Label" type="Label" parent="UI/ProgressBar"]
modulate = Color(1, 0, 0.12549, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.065
anchor_top = 0.296296
anchor_right = -0.065
anchor_bottom = 0.296296
offset_left = 54.0
offset_top = 36.0
offset_right = 171.0
offset_bottom = 59.0
text = "The Red Comet"
horizontal_alignment = 1
justification_flags = 171
metadata/_edit_use_anchors_ = true

[node name="defeat text" type="Label" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.844
anchor_right = 0.5
anchor_bottom = 0.844
offset_left = -80.0
offset_top = -234.412
offset_right = 80.0
offset_bottom = -211.412
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Red Comet Defeated
"
label_settings = SubResource("LabelSettings_ij3q6")
horizontal_alignment = 1
vertical_alignment = 2

[node name="debug" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -11.5
offset_right = 24.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "debug
"

[node name="Line2D" parent="." instance=ExtResource("23_26e1r")]
z_index = -2
position = Vector2(0, -10)
default_color = Color(1, 0, 0, 1)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(1, 0.654902, 0.6, 0.980392)
self_modulate = Color(1.2, 1.2, 1.2, 1)
show_behind_parent = true
material = SubResource("CanvasItemMaterial_g3gci")
position = Vector2(0, -5)
amount = 20
process_material = SubResource("ParticleProcessMaterial_1s7hp")
texture = ExtResource("25_bqt14")
lifetime = 0.5

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(-41, -1)
rotation = -0.0439301
shape = SubResource("CircleShape2D_gg4sb")

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("6_fnn5n")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("8_3pk6o")

[node name="Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("9_mo6w2")

[node name="Slash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("11_w3l68")

[node name="Bazooka" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("15_xgynh")
Bullet = ExtResource("16_3hnkj")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="FiniteStateMachine/Bazooka"]
stream = ExtResource("17_v1jhs")
volume_db = -30.0

[node name="ZakuShot" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("14_gd74x")
Bullet = ExtResource("15_p4bml")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="FiniteStateMachine/ZakuShot"]
stream = ExtResource("16_soqnm")
volume_db = -30.0

[node name="Timer" type="Timer" parent="FiniteStateMachine/ZakuShot"]

[node name="Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("24_pbnnu")

[node name="Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("17_ws0nr")

[connection signal="body_entered" from="WeaponManager/Zaku_axe/Area2D" to="FiniteStateMachine/Slash" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="WeaponManager/bullet_spawner" method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_player_detection_body_entered"]
